--- a/index.html
+++ b/index.html
@@ -143,6 +143,25 @@
     </main>
 
     <footer>
+        <div class="footer-column">
+            <h3 class="section-title">Let's Connect</h3>
+            <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="social-links">
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+                <h3 class="section-title">Let's Message Me</h3>
+                <form class="contact" action="">
+                    <input type="text" placeholder="Name">
+                    <input type="email" placeholder="email">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Write here"></textarea>
+                    
+                </form>
+                <button class="btn-primary">Submit</button>
+        </div>
         
     </footer>
 </body>
